<resources>
    <string name="app_name">InvestosureStart</string>
<string name="login_text">Wikipedia is a free online encyclopedia, created and edited by volunteers around the world and hosted by the Wikimedia Foundation.


</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="main_heading_learn">ALL YOU NEED TO KNOW ABOUT MUTUAL FUNDS</string>
    <string name="Concept_of_Mutual_Fund">Through investment in a mutual fund, an investor can get access to markets that may otherwise
be unavailable to them and avail of the professional fund management services offered by an
asset management company.</string>
    <string name="Role_of_Mutual_Funds">Their primary role is to assist investors in earning an income or building their wealth, by
participating in the opportunities available in various securities and markets. The money that is
raised from investors, ultimately benefits governments, companies and other entities, directly
or indirectly, to raise money for investing in various projects or paying for various expenses.</string>
    <string name="Advantages_of_Mutual_Funds_for_Investors">Advantages of Mutual Funds for Investors</string>
    <string name="Professional_Management">Mutual funds offer investors the opportunity to earn an income or build their wealth through
professional management of their investible funds. There are several aspects to such
professional management viz. investing in line with the investment objective, investing based
on adequate research, and ensuring that prudent investment processes are followed.</string>
    <string name="Why_life_insurance_is_indispensable_for_your_portfolio">It’s good to think about savings but it is wiser to keep in mind the uncertainties in life. Wouldn’t you like your loved ones to be taken care of even when you are not there?
Life Insurance acts as a safety net and covers the financial interests of the people dependent on the life assured. </string>
    <string name="Insurance">Insurance is an agreement between an individual (Policy holder) and the insurance company (insurer) where the Policy holder agrees to pay premiums on regular intervals in return to an assurance by the insurer to pay the sum assured in case of death of the life assured. </string>
    <string name="IRDA">The Insurance Regulatory and Development Authority of India is an autonomous, statutory body tasked with regulating and promoting the insurance and re-insurance industries in India</string>
    <string name="Premium">The amount of money paid by the Policy holder under the policy’s terms and conditions is called the premium. It could be monthly or annual.</string>
    <string name="Sum_Assured">The sum of money ensured by the insurer that he will pay in case of death of the life assured is referred to as sum assured.</string>
    <string name="Life_Assured">The individual whose life is assured by the respective life insurance policy.</string>
    <string name="Policy_Term">The period of time for which the Policy holder agrees to pay the premiums of the policy. In most of the cases it is same as the time for which the life of the policy holder is assured.</string>
    <string name="Premium_Payment_term">The period of time for which life of the life assured is insured under the insurance policy.</string>
    <string name="Free_look">A free look period is a period of time in which a new life insurance policy owner can terminate the policy without penalties, such as surrender charges. In India, according to IRDA regulations, Free look period of 15 days are given to the customers. The amount of premium to be refunded will be provided after making the following deductions: Proportionate risk premium for the coverage period
Stamp duty charges
Any expenses borne by the insurance company towards medical examination</string>
    <string name="Term_Insurance">These are the insurance plans that provides financial coverage to the beneficiary by offering larger sum assured as compared to the annual premiums paid by the policyholder. This makes such plans very economical and affordable for most of the people. Through this plan, one can ensure financial stability to the nominee in case of any mishappening with the life assured. There are no maturity benefits with such plans. The key features of </string>
    <string name="Term_Insurance_are">Get lump sum amount of sum assured in case of sudden death
The entire sum assured is exempted from income tax under section 10(10D)
Provide money so that your family continues to live with pride
It also takes care of your finances in case of disability and critical illness.
One can add many riders to enjoy additional benefits such as critical illness rider, total or permanent disability rider, accidental death benefit rider, hospital cash rider and waiver of premium rider</string>
    <string name="ULIPs">Unit Linked Investment Plans is the combination of best parts from Insurance and Mutual Funds. The premiums collected are invested into different funds based on the risk apatite of the client. It also offers flexibility to switch the funds between different funds depending upon the market conditions. The performance of the fund is monitored by the NAV of the respective fund.</string>
    <string name="Key_Features_of_ULIPs">Provides Transparent structure of investment with benefits of risk management
Flexibility of switching funds
Provides Life Cover in case of mishappening
Different premium paying frequencies
Various risk options
Tax benefits under Sections 80C, 80D, 10(10D)
Rider options available</string>
    <string name="Endowment_Policy">The insurance policy that insures the life of the Policy holder for a fixed period. During this period, the Policy holder pays the periodic premiums and receives the pre-determined sum assured in case of the untimely death/maturity/end of policy</string>
    <string name="They_are_mainly_of_two_types">Endowment with profit
Endowment without profit => Term Insurance</string>
    <string name="additional_benefits">It also offers additional benefits such as Terminal and Revisionary bonus. These bonuses are variable depending on the growth of the company and are given to with profit policy holders.</string>
    <string name="Key_Features_of_Endowment_Policy">Sum assured is paid on both case ie. Death or maturity
With and without plans are present hence, one can get affordable premiums
Bonuses are given as additional benefits (Terminal and Revisionary)
Premium paid are income tax free under section 80C
Maturity benefits received under these plans are tax free under section 10(10D)
One can take loans on the sum assured under this policy
Have rider benefits</string>
    <string name="Money_Back_Plans">This kind of Insurance plans provides live coverage and provides annual/monthly payouts that are very vital to overcome the financial urges at key stages of life. The policyholder starts getting these payouts in case of death or the maturity of the policy. The policy holder also gets survival bonus every year which he has survived, after few years of the beginning of the policy. Thus, the money back plan offers regular income along with a maturity benefit just like standard life insurance policies.</string>
    <string name="What_is_Financial_Planning">Everyone has needs and aspirations. Most of these needs require a financial commitment. Providing for this commitment becomes a financial goal.
For example, a father wants his son, who has just passed his 10th standard Board examinations, to become a doctor. This is an aspiration. In order to realize this, formal education expenses, coaching class expenses, hostel expenses and various other expenses need to be incurred over a number of years. The estimated financial commitments towards these expenses become financial goals.
The needs or aspirations are a good starting point, but in order to plan, these need to be converted into financial goals. The financial goals must be defined in terms of time horizon and the amount of money required to fund the goal.
Financial planning is a planned and systematic approach to provide for the financial goals that will help people realize their needs and aspirations, and be happy.</string>
    <string name="The_Objective_of_Financial_Planning">The objective of financial planning is to ensure that the right amount of money is available at the right time to meet the various financial goals of the investor. This would help the investor realize his aspirations and experience happiness. It gives direction to the investor’s spending and saving habits.
An objective of financial planning is also to let the investor know in advance, if some financial goal is not likely to be fulfilled.
Thanks to advance information available through financial planning, timely corrective actions can be taken, such as:</string>
    <string name="such_as">Reviewing what is a “need” and what is a “desire” that can be postponed for the more desirable objective of realizing the aspiration.
Moving to a smaller house, or a house in a less expensive locality, to release more capital.
Improving the future annual savings by economizing on expense, or taking up an extra part-time job, or influencing the spouse to take up employment for some time.
Considering a loan to bridge the short fall in funds.</string>
    <string name="The_Need_for_Financial_Planning">Most investors are either not organized, or lack the ability to make the calculations described above. A financial planner’s service is therefore invaluable in helping people realize their needs and aspirations.
Even if the investor knows the calculations, the knowledge of how and where to invest may be lacking. The financial planner thus steps in to help the investor select appropriate financial products and invest in them.
Transactions such as purchase of house or car, or even education, necessitate a borrowing. The financial planner can help the investor decide on the optimal source of borrowing and structure the loan arrangement with the lender.
Taxation is another area that most investors are unclear about. Financial planners who are comfortable with the tax laws can therefore help the investor with tax planning, so as to optimize the tax outflows.
Financial planners can also help investors in planning for contingencies. This could be through advice on insurance products, inheritance issues etc. The financial planner thus is in a position to advice investors on all the financial aspects of their life. </string>
    <string name="The_steps_in_creating_a_comprehensive_financial_plan_are_as_follows">Establish and Define the Client-Planner Relationship
Gather Client Data, Define Client Goals
Analyze and Evaluate Client’s Financial Status
Develop and Present Financial Planning Recommendations and / or Options
Implement the Financial Planning Recommendations
Monitor the Financial Planning Recommendations</string>
    <string name="comprehensive_financial">The comprehensive financial plan captures the estimated inflows from various sources, and estimated outflows for various financial goals, including post-retirement living expenses. The plan can go several decades into the future.
A comprehensive financial plan calls for significantly more time commitment on the part of both the investor and the financial planner. However, the time commitment needs to be viewed as an investment in a long term relationship. </string>
</resources>