<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorgray">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Financial planning"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"

            android:layout_marginBottom="10dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-> What is Financial Planning?"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colororange"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/What_is_Financial_Planning"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-> The Objective of Financial Planning"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colororange"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/The_Objective_of_Financial_Planning"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/such_as"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-> The Need for Financial Planning"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colororange"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/The_Need_for_Financial_Planning"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-> Steps to create a Comprehensive Financial Plan"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colororange"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/The_steps_in_creating_a_comprehensive_financial_plan_are_as_follows"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comprehensive_financial"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
</LinearLayout>